# dte

./: CONTRIBUTING.md  Cargo.toml  DESIGN.md  KEYSTROKES.md  README.md  Taskfile.yml  debug.txt  tarpaulage.sh
.github/: README.md
editor/: Cargo.toml  README.md
editor/src/: editor.rs  keys.rs  main.rs  states.rs  trigger.rs  utils.rs
engine/: Cargo.toml  README.md
engine/src/: controller.rs  cursor.rs  editor.rs  lib.rs  model.rs  plane.rs  rect.rs  region.rs  updates.rs  utils.rs
engine/src/model/: characters.rs  cursor.rs  mod.rs  plane.rs  row.rs
engine/tests/: mod.rs  test_character.rs  test_debug.rs  test_region.rs
engine/tests/test_controller/: mod.rs  test_attributes.rs  test_controller_new.rs  test_controller_resize.rs  test_cursor_move.rs  test_cursor_shape.rs  test_delete_before_cursor.rs  test_delete_char_before_cursor.rs  test_delete_under_cursor.rs  test_insert_char.rs  test_new.rs  test_override_char.rs  test_resize.rs  test_split_line.rs  test_unsplit_line.rs  test_viewport_move.rs
engine/tests/test_files/: 0001.dtb  0002.dtb  0003.dtb  0004.dtb  mod.rs
examples/: e1.dtb  e2.dtb  e3.dtb  e4.dtb
src/: editor.rs  keys.rs  main.rs
src/ed/: cursor.rs  editor.rs  mod.rs  plane.rs
