[package]
name = "dte"
version = "0.0.0"
authors = ["Dariusz Depta <dariusz.depta@dsntk.io>"]
description = "Decision table editor"
documentation = "https://docs.rs/dte"
repository = "https://github.com/DecisionToolkit/dte.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
