[workspace]

resolver = "2"

members = [
    "editor",
    "engine"
]

[workspace.package]
version = "0.0.1"
authors = ["Dariusz Depta <depta@engos.de>"]
repository = "https://github.com/DecisionToolkit/dte.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
crossterm = "0.27.0"
