[package]
name = "dte"
version = { workspace = true }
authors = { workspace = true }
description = "Decision table editor"
documentation = "https://docs.rs/dte"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
crossterm = { workspace = true }
dtee = { path = "../engine" }
