[package]
name = "dte"
version = { workspace = true }
authors = { workspace = true }
description = "Decision table editor"
documentation = "https://docs.rs/dte"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
crossterm = { workspace = true }
dtee = "0.0.6"
